# zetofi

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  supabase-schema.sql
anchor/: Anchor.toml  Cargo.toml
anchor/programs/zeto_escrow/: Cargo.toml
anchor/programs/zeto_escrow/src/: lib.rs
scripts/: create-orgo-token.js
src/app/: globals.css  layout.js  page.js
src/app/api/deals/: route.js
src/app/api/deals/[id]/: route.js
src/app/api/dexscreener/token/[mint]/: route.js
src/app/api/intents/: route.js
src/app/api/token/[mint]/: route.js
src/app/board/: page.js
src/app/deal/[id]/: page.js
src/app/history/: page.js
src/app/settle/: page.js
src/components/: Card.js  DisclaimerBanner.js  Header.js  Input.js  LenisScrollProvider.js  Providers.js  ScrollReveal.js  Select.js  TokenInput.js
src/lib/: escrow.js  escrowClient.js  format.js  solana.js  storage.js  supabase.js  verifySignature.js
